--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>First Name Last Name</title>
+		<title>Yunyi Xie</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	</head>
 	<body>
-		
-     NoTHiNg tO sEE HeRe
+    <div class="name">
+    	Yunyi Xie
+    </div>
+
+		<div class="navi">
+    	<span class="navi1">print</span><br>
+			<span class="navi2">motion</span><br>
+			<span class="navi3">contact</span>
+    </div>
+
 
 	</body>
 </html>
