--- a/three/index.html
+++ b/three/index.html
@@ -1,12 +1,108 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>First Name Last Name</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<title>THREE</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style3.css">
 	</head>
 	<body>
-		
-     NoTHiNg tO sEE HeRe
+		<div class="row">
+  <div class="fixed">
+  3
+  </div>
+</div>
+
+<div class="row align__bottom">
+
+  <div class="col__1of3">
+    <div class="content">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc efficitur felis luctus rutrum pharetra. Sed molestie, quam sed fringilla fermentum, leo sem dictum tellus, eu congue risus dui sed est.
+    </div>
+  </div>
+
+   <div class="col__1of3">
+    <div class="content">
+			<img src="https://www.flickr.com/photos/133491911@N06/37482618281/sizes/o/" alt"">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc efficitur felis luctus rutrum pharetra. Sed molestie, quam sed fringilla fermentum, leo sem dictum tellus, eu congue risus dui sed est.
+    </div>
+  </div>
+
+   <div class="col__1of3">
+    <div class="content">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc efficitur felis luctus rutrum pharetra.
+    </div>
+  </div>
+
+  <div class="col__2of3">
+    <div class="content">
+      <img src="https://www.flickr.com/photos/133491911@N06/37482618281/sizes/o/" alt"">
+
+    </div>
+  </div>
+
+
+
+
+
+  <div class="col__1of3">
+    <div class="content">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc efficitur felis luctus rutrum pharetra. Sed molestie, quam sed fringilla fermentum, leo sem dictum tellus, eu congue risus dui sed est. Pellentesque eu leo at nibh consequat mollis sed non turpis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum malesuada, elit nec varius tristique, metus nisl sollicitudin nisl, ultricies dignissim libero nibh nec dolor. Maecenas eros mi, facilisis fringilla sem sit amet, sagittis dapibus purus. Fusce auctor, dui non pharetra facilisis, sem tortor scelerisque odio, a eleifend lacus libero at quam. Suspendisse potenti. Pellentesque ut vulputate leo. Mauris quis velit vel metus auctor consectetur. Proin dapibus nisl libero, eget tristique lectus tincidunt in. Nullam eget mi rhoncus, ullamcorper neque quis, luctus justo. Mauris efficitur metus non lorem rhoncus, ac condimentum odio imperdiet. Pellentesque velit elit, dignissim nec lacinia pharetra, porttitor eget lectus.
+    </div>
+  </div>
+
+
+
+</div>
+
+
+
+
+
+
+
+
+     <div class="name"> Three is an archive of my 3 years in Melbourne.</div>
+
+
+     <br>
+		 On October the 4th, 2014, I stepped on the plane to Melbourne and started my life abroad. <br>
+		 The same morning, my grandfather's funeral was held.<br>
+		 It was two months before that we found out he had lung cancer.<br>
+		 To me, grandpa was quiet, strict yet kind. He was "the nerd" in our family. complete opposite to me back then, I didn't realize the last part until I saw him lying there, lifelessly.<br>
+		 I kept remembering how he promised me he would definitely come to the airport and see me off. <br>
+		 There was not enough time for me to mourne, I came to this conclusion as the plane was taking off. <br>
+		 I never allowed myself to mourne
+     ----
+		 DSLR camera
+		 uni offer
+     photograph of grandpa
+		 Indian food
+		 flowers
+		 myki / flinders
+		 picture of my homestay
+	   my attempt to be a waitress / bowl? dumplings? / 20 dollars?
+		 ----
+		 cats
+		 tibbers
+		 keys
+		 umbrella
+		 make up
+		 curtains
+		 ----
+		 hat
+		 tote bag
+		 chinese postcards
+		 bf / star wars
+     plant
+		 posters made at intrasia
+		 earrings
+		 ----
+
+
+     <br> >>>
+
+
+
+
 
 	</body>
 </html>
