--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	</head>
 	<body>
-    <div class="name">
-    	Yunyi Xie
+    <div class="titleright">
+    	Yunyi Xie / Comunication Designer
     </div>
 
 		<div class="navi">
-    	<span class="navi1">print</span><br>
-			<span class="navi2">motion</span><br>
-			<span class="navi3">contact</span>
+    	Site under Construction.<br>
+			<br><br>
+			Instagram / <a href="https://www.instagram.com/yunyii/">@yunyii</a>
+			<br>
+			E-mail / yunyiix@gmail.com
+			<br>
+			Mobile / +61 420 845 561
     </div>
+
+
 
 
 	</body>
