--- a/three/index.html
+++ b/three/index.html
@@ -2,98 +2,241 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> THREE</title>
+    <title>THREE</title>
     <link rel="stylesheet" href="assets/css/style3.css">
-      <script src="assets/js/jquery-3.2.0.min.js" charset="utf-8"></script>
-    <script src="assets/js/main.js" charset="utf-8"></script>
+      <script src="assets/jquery/jquery-3.2.0.min.js" charset="utf-8"></script>
+    <script src="assets/jquery/main.js" charset="utf-8"></script>
   </head>
   <style media="screen">
 
 
   </style>
   <body>
+   <script>document.body.className += ' fade-out';</script>
 
-	<body>
-
-		<div class="row">
+    <div class="row">
   <div class="fixed">
-  <img src="assets/images/archive_fixed.png" alt"" width="100px">
+  <a href="index.html"><img src="assets/images/archive_fixed.png" alt"" width="100px"></a>
   </div>
-	<div class="title hidden">
-    *An archive of my identity crisis*<br>
-	</div>
-</div>
+  </div>
 
 
 <div class="row align__bottom">
 
-	<div class="col__1of3">
+  <div class="col__66">
+    <div class="content">
+
+    </div>
+  </div>
+
+  <div class="col__33">
+    <div class="content">
+        <img src="assets/images/archive_105.png" alt"pencil bag">
+    </div>
+  </div>
+
+  <div class="col__33">
+    <div class="content">
+      <img src="assets/images/archive_309.png" alt"snorlax">
+    </div>
+  </div>
+
+  <div class="col__66">
+    <div class="content">
+
+    </div>
+  </div>
+
+  <div class="col__66">
+    <div class="content">
+
+    </div>
+  </div>
+
+  <div class="col__33">
+    <div class="content">
+        <img src="assets/images/archive_206.png" alt"">
+    </div>
+  </div>
+
+  <div class="col__66">
+    <div class="content">
+      <img src="assets/images/archive_302.png" alt"avocado">
+    </div>
+  </div>
+
+  <div class="col__33">
+    <div class="content">
+
+    </div>
+  </div>
+
+  <div class="col__100">
+   <div class="content">
+     <a href="archive203.html"><img class="thumb" src="assets/images/archive_203.png" alt"Kitten Effy"></a>
+   </div>
+ </div>
+
+
+	<div class="col__25">
 		<div class="content">
-			<img src="assets/images/archive_101.jpg" alt"">
-			Diploma Certificate
+			<img src="assets/images/archive_101.png" alt"collge">
 		</div>
 	</div>
 
-	 <div class="col__2of3">
+	 <div class="col__25">
 		<div class="content">
-		-
+
 		</div>
 	</div>
 
-	 <div class="col__1of3">
+	 <div class="col__25">
 		<div class="content">
-			-
+			<img src="assets/images/archive_305.png" alt"fruit">
 		</div>
 	</div>
 
+  <div class="col__25">
+   <div class="content">
 
-   <div class="col__1of3">
+   </div>
+ </div>
+
+ <div class="col__25">
+   <div class="content">
+       <img src="assets/images/archive_208.png" alt"">
+   </div>
+ </div>
+
+ <div class="col__75">
+   <div class="content">
+     <img src="assets/images/archive_211.png" alt"avocado">
+   </div>
+ </div>
+
+ <div class="col__33">
+   <div class="content">
+
+   </div>
+ </div>
+
+  <div class="col__33">
+   <div class="content">
+
+   </div>
+ </div>
+
+  <div class="col__33">
+   <div class="content">
+     <img src="assets/images/archive_102.jpg" alt"umbrella">
+   </div>
+ </div>
+
+
+   <div class="col__100">
     <div class="content">
-			<img src="assets/images/archive_301.jpg" alt"">
-      Random photo at work
+      <a href="archive301.html"><img class="thumb" src="assets/images/archive_301.jpg" alt"Random photo at work"></a>
     </div>
   </div>
 
-   <div class="col__1of3">
+  <div class="col__33">
     <div class="content">
-      -
+      <img src="assets/images/archive_207.png" alt"snorlax">
     </div>
   </div>
-
-  <div class="col__2of3">
+  <div class="col__33">
     <div class="content">
-      <img src="assets/images/archive_201.jpg" alt"">
-      <br>  A set of postcards I designed,
+
     </div>
   </div>
-
-
-
-
-
-  <div class="col__1of3">
+  <div class="col__33">
     <div class="content">
-
 
     </div>
   </div>
 
-	<div class="col__3of3">
+  <div class="col__33">
+   <div class="content">
+    <img  src="assets/images/archive_104.png" alt"Chinese SIM card" width=100px>
+   </div>
+ </div>
+
+ <div class="col__33">
+  <div class="content">
+
+  </div>
+</div>
+
+  <div class="col__33">
+   <div class="content">
+    <img  src="assets/images/archive_204.png" alt"Tibbers" width=100px>
+   </div>
+ </div>
+
+  <div class="col__66">
     <div class="content">
-      -
+      <a href="archive201.html"><img class="thumb" src="assets/images/archive_201.jpg" alt"A set of postcards I designed"></a>
+      <br>
     </div>
   </div>
 
-   <div class="col__3of3">
+  <div class="col__33">
     <div class="content">
-			<img src="assets/images/archive_102.jpg" alt"">
-      Random photo at work
+    <img src="assets/images/archive_303.png" alt"mr.plant">
     </div>
   </div>
 
-   <div class="col__3of3">
+  <div class="col__33">
+   <div class="content">
+    <img src="assets/images/archive_108.png" alt"Du Zhe" width=100px>
+   </div>
+  </div>
+
+  <div class="col__33">
+   <div class="content">
+
+   </div>
+  </div>
+
+  <div class="col__33">
+  <div class="content">
+     <img src="assets/images/archive_304.png" alt"at uni" width=100px>
+  </div>
+  </div>
+
+  <div class="col__50">
+  <div class="content">
+
+  </div>
+  </div>
+
+  <div class="col__50">
+  <div class="content">
+    <img img class="thumb" src="assets/images/archive_209.png" alt"pizza" width=100px>
+  </div>
+  </div>
+
+  <div class="col__33">
+   <div class="content">
+     <img src="assets/images/archive_210.png" alt"Grandpa" width=100px>
+   </div>
+  </div>
+
+  <div class="col__33">
+   <div class="content">
+     <img src="assets/images/archive_103.png" alt"Grandpa" width=100px>
+   </div>
+  </div>
+
+  <div class="col__33">
+  <div class="content">
+
+  </div>
+  </div>
+
+  <div class="col__100">
     <div class="content">
-      "You are more of a designer than an illustrator."
+      <img src="assets/images/archive_308.png" alt"john baldessari">
     </div>
   </div>
 
@@ -128,9 +271,10 @@
 		 * college folio
 		 *umbrella
 		 make up
+     * wacom "You are more of a designer than an illustrator."
 		 * empty pizza box
 		 curtains
-		 *opener
+		 * opener
 		 ----
 		 hat
 		 * tote bag
@@ -141,6 +285,7 @@
 		 earrings
 		 * baldersarri poster / paint
 		 ----
+     my name
 
 
      <br> >>>
