--- a/three/index.html
+++ b/three/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>THREE</title>
     <link rel="stylesheet" href="assets/css/style3.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:700" rel="stylesheet">
       <script src="assets/jquery/jquery-3.2.0.min.js" charset="utf-8"></script>
     <script src="assets/jquery/main.js" charset="utf-8"></script>
   </head>
@@ -16,14 +18,14 @@
 
     <div class="row">
   <div class="fixed">
-  <a href="index.html"><img src="assets/images/archive_fixed.png" alt"" width="100px"></a>
+  <a href="index.html"><img src="assets/images/archive_fixed.png" alt"" width="130vw"></a>
   </div>
   </div>
 
 
 <div class="row align__bottom">
 
-  <div class="col__66">
+  <div class="col__33">
     <div class="content">
 
     </div>
@@ -32,16 +34,30 @@
   <div class="col__33">
     <div class="content">
         <img src="assets/images/archive_105.png" alt"pencil bag">
+        <div class="caption">
+          <span>Pencil bag I used in high school, can't remeber anything specific about it. I just like to see it lying there in the corner so I can get some flash back of "the part of my life when my only worry is grades"</span>
+        </div>
+
+        </div>
     </div>
-  </div>
+
 
   <div class="col__33">
     <div class="content">
-      <img src="assets/images/archive_309.png" alt"snorlax">
+
     </div>
   </div>
 
   <div class="col__66">
+    <div class="content">
+      <img src="assets/images/archive_309.png" alt"snorlax">
+      <div class="caption">
+        <span>Snorlax slippers, cute but make annoying sounds.</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="col__33">
     <div class="content">
 
     </div>
@@ -56,12 +72,18 @@
   <div class="col__33">
     <div class="content">
         <img src="assets/images/archive_206.png" alt"">
+        <div class="caption">
+          <span> Time for house cleaning. Yay.</span>
+        </div>
     </div>
   </div>
 
   <div class="col__66">
     <div class="content">
       <img src="assets/images/archive_302.png" alt"avocado">
+      <div class="caption">
+        <span>Baked avocado with egg, bacon and cheese. It was edible. </span>
+      </div>
     </div>
   </div>
 
@@ -74,6 +96,9 @@
   <div class="col__100">
    <div class="content">
      <a href="archive203.html"><img class="thumb" src="assets/images/archive_203.png" alt"Kitten Effy"></a>
+     <div class="caption">
+       <span>My cat. Give her some food and she'll be yours.</span>
+     </div>
    </div>
  </div>
 
@@ -81,6 +106,9 @@
 	<div class="col__25">
 		<div class="content">
 			<img src="assets/images/archive_101.png" alt"collge">
+      <div class="caption">
+        <span>Diploma Certificate.</span>
+      </div>
 		</div>
 	</div>
 
@@ -93,6 +121,9 @@
 	 <div class="col__25">
 		<div class="content">
 			<img src="assets/images/archive_305.png" alt"fruit">
+      <div class="caption">
+        <span>Oranges. I have mixed feelings for oranges. </span>
+      </div>
 		</div>
 	</div>
 
@@ -105,12 +136,18 @@
  <div class="col__25">
    <div class="content">
        <img src="assets/images/archive_208.png" alt"">
+       <div class="caption">
+         <span>Soy Sauce</span>
+       </div>
    </div>
  </div>
 
  <div class="col__75">
    <div class="content">
      <img src="assets/images/archive_211.png" alt"avocado">
+     <div class="caption">
+       <span>Apartment Keys.</span>
+     </div>
    </div>
  </div>
 
@@ -129,6 +166,9 @@
   <div class="col__33">
    <div class="content">
      <img src="assets/images/archive_102.jpg" alt"umbrella">
+     <div class="caption">
+       <span>Australian Umbrella.</span>
+     </div>
    </div>
  </div>
 
@@ -136,19 +176,27 @@
    <div class="col__100">
     <div class="content">
       <a href="archive301.html"><img class="thumb" src="assets/images/archive_301.jpg" alt"Random photo at work"></a>
+      <div class="caption">
+        <span>Me and Abi. I met Abi in July. After almost 3 years in Melbounre, she's one of the few people I could have an actual conversation with. We understand each other. </span>
+      </div>
     </div>
   </div>
 
   <div class="col__33">
     <div class="content">
       <img src="assets/images/archive_207.png" alt"snorlax">
+      <div class="caption">
+        <span>NANA</span>
+      </div>
     </div>
   </div>
+
   <div class="col__33">
     <div class="content">
 
     </div>
   </div>
+
   <div class="col__33">
     <div class="content">
 
@@ -158,6 +206,10 @@
   <div class="col__33">
    <div class="content">
     <img  src="assets/images/archive_104.png" alt"Chinese SIM card" width=100px>
+    <div class="caption">
+      <span>My Chinese SIM card. Without it, I won't be able to contact my parents after 10 hours of flight and I know my family will be waiting anxiously for that one call when I land.
+       </span>
+    </div>
    </div>
  </div>
 
@@ -170,25 +222,36 @@
   <div class="col__33">
    <div class="content">
     <img  src="assets/images/archive_204.png" alt"Tibbers" width=100px>
+    <div class="caption">
+      <span>Dead friendship.</span>
+    </div>
    </div>
  </div>
 
   <div class="col__66">
     <div class="content">
       <a href="archive201.html"><img class="thumb" src="assets/images/archive_201.jpg" alt"A set of postcards I designed"></a>
-      <br>
+      <div class="caption">
+        <span>All about the Chinese postcard</span>
+      </div>
     </div>
   </div>
 
   <div class="col__33">
     <div class="content">
     <img src="assets/images/archive_303.png" alt"mr.plant">
+    <div class="caption">
+      <span>Mr.plant. </span>
+    </div>
     </div>
   </div>
 
   <div class="col__33">
    <div class="content">
     <img src="assets/images/archive_108.png" alt"Du Zhe" width=100px>
+    <div class="caption">
+      <span>A Magazine from 2003, found in a car repairing shop in Melbounre. I used to read every edition of Du Zhe, reading this in 2017 felt like time travel.</span>
+    </div>
    </div>
   </div>
 
@@ -201,6 +264,9 @@
   <div class="col__33">
   <div class="content">
      <img src="assets/images/archive_304.png" alt"at uni" width=100px>
+     <div class="caption">
+       <span>Last few days of Uni life, didn't feel like something is ending. </span>
+     </div>
   </div>
   </div>
 
@@ -213,18 +279,27 @@
   <div class="col__50">
   <div class="content">
     <img img class="thumb" src="assets/images/archive_209.png" alt"pizza" width=100px>
+    <div class="caption">
+      <span>A sad and empty pizza box</span>
+    </div>
   </div>
   </div>
 
   <div class="col__33">
    <div class="content">
      <img src="assets/images/archive_210.png" alt"Grandpa" width=100px>
+     <div class="caption">
+       <span>Dead bug on the perfume bottle</span>
+     </div>
    </div>
   </div>
 
   <div class="col__33">
    <div class="content">
      <img src="assets/images/archive_103.png" alt"Grandpa" width=100px>
+     <div class="caption">
+       <span>The only photo I have of my Grandpa who passed away 2 days before I stepped on Australian soil.</span>
+     </div>
    </div>
   </div>
 
@@ -237,6 +312,9 @@
   <div class="col__100">
     <div class="content">
       <img src="assets/images/archive_308.png" alt"john baldessari">
+      <div class="caption">
+        <span>A wall I painted.</span>
+      </div>
     </div>
   </div>
 
@@ -252,40 +330,7 @@
 
      <br>
 
-     ----
-		 passport
-		 * DSLR camera
-		 * uni offer
-     * photograph of grandpa
-		 *japanese amulet
-		 chinese sim card
-		 Indian food
-		 flowers
-		 * myki / flinders
-		 picture of my homestay
-	   my attempt to be a waitress / bowl? dumplings? / *20 dollars
-		 ----
-		 * cats
-		 * tibbers
-		 * keys
-		 * college folio
-		 *umbrella
-		 make up
-     * wacom "You are more of a designer than an illustrator."
-		 * empty pizza box
-		 curtains
-		 * opener
-		 ----
-		 hat
-		 * tote bag
-		 * chinese postcards
-		 bf / star wars
-     * plant
-		 * shitty posters made for $
-		 earrings
-		 * baldersarri poster / paint
-		 ----
-     my name
+
 
 
      <br> >>>
