--- a/three/index.html
+++ b/three/index.html
@@ -95,7 +95,7 @@
 
   <div class="col__100">
    <div class="content">
-     <a href="archive203.html"><img class="thumb" src="assets/images/archive_203.png" alt"Kitten Effy"></a>
+     <img src="assets/images/archive_203.png" alt"Kitten Effy"></a>
      <div class="caption">
        <span>My cat. Give her some food and she'll be yours.</span>
      </div>
@@ -175,7 +175,7 @@
 
    <div class="col__100">
     <div class="content">
-      <a href="archive301.html"><img class="thumb" src="assets/images/archive_301.jpg" alt"Random photo at work"></a>
+      <img src="assets/images/archive_301.jpg" alt"Random photo at work"></a>
       <div class="caption">
         <span>Me and Abi. I met Abi in July. After almost 3 years in Melbounre, she's one of the few people I could have an actual conversation with. We understand each other. </span>
       </div>
