--- a/three/index.html
+++ b/three/index.html
@@ -325,7 +325,7 @@
 
      <div class="name">
 			 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-			 Three is an archive of my 3 years in Melbourne / An archive of my identity crisis</div>
+			 Three is an archive of my 3 years in Melbourne</div>
 
 
      <br>
@@ -333,7 +333,7 @@
 
 
 
-     <br> >>>
+     <br>
 
 
 
