--- a/index.html
+++ b/index.html
@@ -1,81 +1,83 @@
 <!DOCTYPE html>
-	<html>
-	  <head>
-	    <meta charset="utf-8">
-	    <title>Yunyi Xie</title>
-	    <link rel="stylesheet" href="assets/css/style.css">
-	      <script src="assets/jquery/jquery-3.2.0.min.js" charset="utf-8"></script>
-	    <script src="assets/jquery/main.js" charset="utf-8"></script>
-			<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-			<link href="https://fonts.googleapis.com/css?family=Khula|Raleway" rel="stylesheet">
-	  </head>
-	  <style media="screen">
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <title>YUNYI.DESIGN</title>
+  <link rel="stylesheet" href="assets/css/style.css">
+  <script src="assets/jquery/jquery-3.2.0.min.js" charset="utf-8"></script>
+  <script src="assets/jquery/main.js" charset="utf-8"></script>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,600,800,900" rel="stylesheet">
+</head>
+<style media="screen">
+</style>
+
+<body>
+  <script>
+    document.body.className += ' fade-out';
+  </script>
+
+  <div class="right">
+    <a href="index.html">work</a>&nbsp;&nbsp;&nbsp;
+    <a href="contact.html">contact</a>
+  </div>
+
+  <div class="webtitle">
+    YUNYI.&nbsp;DESIGN
+  </div>
+
+  <div class="wrapper">
 
 
-	  </style>
-	<body>
-		<script>document.body.className += ' fade-out';</script>
+    <div class="row align__bottom">
 
-    <div class="right">
-			<a href="index.html">work</a>&nbsp;&nbsp;&nbsp;
-			<a href="contact.html">contact</a>
+      <div class="col__3">
+        <div class="content">
+          <img class="bottom" src="https://c1.staticflickr.com/5/4483/38082703082_190bac211a_b.jpg" />
+        </div>
+      </div>
+
+      <div class="col__3">
+        <div class="content">
+          <img class="bottom" src="https://c1.staticflickr.com/5/4510/38110715501_2cba43284c_b.jpg" />
+        </div>
+      </div>
+
+      <div class="col__3">
+        <div class="content">
+          <img class="bottom" src="https://c1.staticflickr.com/5/4509/38092467201_f061fefefb_b.jpg" />
+        </div>
+      </div>
+
+      <div class="col__3">
+        <div class="content">
+          <img class="bottom" src="https://c1.staticflickr.com/5/4459/26309159039_f24ef0c627_h.jpg" />
+        </div>
+      </div>
+
+      <div class="col__3">
+        <div class="content">
+          <img class="bottom" src="https://c1.staticflickr.com/5/4496/37376450654_7ed896786a_b.jpg" />
+        </div>
+      </div>
+
+      <div class="col__3">
+        <div class="content">
+          <img class="bottom" src="https://c1.staticflickr.com/5/4507/38054482552_181465b715_b.jpg" />
+        </div>
+      </div>
     </div>
 
-    <div class="navi">
-      Yunyi Xie / Communication Design
-		</div>
-
-    <div class="list">
-		<div id="cf">
 
 
-			<div id="cf">
-				<div class="thumbnailwrapper ">
-						<img class="bottom" src="https://c1.staticflickr.com/5/4510/38110715501_2cba43284c_b.jpg" />
+  </div>
 
-				</div>
-			</div>
-
-
-
-			<div class="thumbnailwrapper">
-		      <img class="bottom" src="https://c1.staticflickr.com/5/4496/37376450654_7ed896786a_b.jpg" />
-
-      </div>
-		</div>
-
-		<div id="cf">
-			<div class="thumbnailwrapper fadein">
-					<img class="bottom" src="https://c1.staticflickr.com/5/4507/38054482552_181465b715_b.jpg" />
-
-			</div>
-		</div>
-
-		<div id="cf">
-			<div class="thumbnailwrapper fadein">
-		      <img class="bottom" src="https://c1.staticflickr.com/5/4459/26309159039_f24ef0c627_h.jpg" />
-
-      </div>
-		</div>
-
-
-
-		<div id="cf">
-			<div class="thumbnailwrapper fadein">
-		      <img class="bottom" src="https://c1.staticflickr.com/5/4509/38092467201_f061fefefb_b.jpg" />
-
-      </div>
-		</div>
-
-
-
-
-
-
-	  </div>
-
-
-
+  </div>
+  </div>
+	<div class="foot">
+	HANDMADE WEBSITE BY YUNYI.DESIGN @ 2017-2018 ALL RIGHTS RESERVED
 	</div>
-	</body>
+</body>
+
 </html>
