--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
 	    <link rel="stylesheet" href="assets/css/style.css">
 	      <script src="assets/jquery/jquery-3.2.0.min.js" charset="utf-8"></script>
 	    <script src="assets/jquery/main.js" charset="utf-8"></script>
-			<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> 
-			<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+			<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+			<link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,600,800,900" rel="stylesheet">
 	  </head>
 	  <style media="screen">
 
@@ -21,15 +21,23 @@
 			<a href="contact.html">contact</a>
     </div>
 
-    <div class="navi">
+		<div class="webtitle">
+	    YUNYI.&nbsp;DESIGN
+	  </div>
+    <div class="wrapper">
+		<div class="row align__bottom">
 
+			<div class="col__3 text">
+					<p>I'm a freelance graphic designer focusing on logo design, brand identity, photography and design research. If you'd lik to discuss a stategic approach to the design, redesign, or refinement of your visual branding, I'd love to have a chat with you.</p>
+					+&nbsp;Instagram &nbsp; <a href="https://www.instagram.com/yunyii/">@yunyii</a>
+					<br>
+					+&nbsp;E-mail &nbsp; yunyiix@gmail.com
+					<br>
+					+&nbsp;Mobile &nbsp;+61 420-845-561
+			</div>
 		</div>
-    Yunyi Xie / Communication Designer —<br><br>
-		Instagram / <a href="https://www.instagram.com/yunyii/">@yunyii</a>
-		<br>
-		E-mail / yunyiix@gmail.com
-		<br>
-		Mobile / +61 420 845 561
+	</div>
+
 
 
 
