--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 	<html>
 	  <head>
 	    <meta charset="utf-8">
-	    <title>Contact</title>
+	    <title>CONTACT - YUNYI.DESIGN</title>
 	    <link rel="stylesheet" href="assets/css/style.css">
 	      <script src="assets/jquery/jquery-3.2.0.min.js" charset="utf-8"></script>
 	    <script src="assets/jquery/main.js" charset="utf-8"></script>
@@ -16,37 +16,46 @@
 	<body>
 		<script>document.body.className += ' fade-out';</script>
 
-    <div class="right">
-			<a href="index.html">work</a>&nbsp;&nbsp;&nbsp;
-			<a href="contact.html">contact</a>
-    </div>
+		  <div class="navigation">
+		    <a href="index.html">work</a>&nbsp;&nbsp;&nbsp;
+		    <a href="fotos.html">foto</a>&nbsp;&nbsp;&nbsp;
+		    <a href="contact.html">contact</a>
+		  </div>
 
-		<div class="webtitle">
-	    YUNYI.&nbsp;DESIGN
-	  </div>
+		  <div class="webtitle">
+		    YUNYI.&nbsp;DESIGN
+		  </div>
+
     <div class="wrapper">
-		<div class="row align__bottom">
-
-			<div class="col__3 text">
-					<p>I'm a freelance graphic designer focusing on logo design, brand identity, photography and design research. If you'd lik to discuss a stategic approach to the design, redesign, or refinement of your visual branding, I'd love to have a chat with you.</p>
-					+&nbsp;Instagram &nbsp; <a href="https://www.instagram.com/yunyii/">@yunyii</a>
-					<br>
-					+&nbsp;E-mail &nbsp; yunyiix@gmail.com
-					<br>
-					+&nbsp;Mobile &nbsp;+61 420-845-561
+		<section>
+			<div>
+					Instagram <br>@<span class="ins"><a href="https://www.instagram.com/yunyi.design/">yunyi.design</a></span>
+					<br><br>
+					E-mail <br>hello@yunyi.design
+					<br><br>
+					Mobile<br>+61 420-845-561
 			</div>
+
+			<div>
+				I’m a multi-disciplinary designer, freshly graduated from Monash University with a bachelor degree of Communication Design specialising in brand identity design, photography and illustration. Each design is concept driven, developing a unique solution that is specific for each project.
+				<br>If you'd like to discuss a strategic approach to the design, redesign, or refinement of your visual branding, please don't hesitate to get in touch with me. :)
+        <br><br><br><br>
+				Monash University — <br>
+        Bachelor of Communication Design (Graduated 2017)
+				<br><br>
+				Freelance — <br>
+        Various clients (Nov 2014–present)
+
+			</div>
+			</section>
 		</div>
-	</div>
-
-
-
-
-
-
-	  </div>
-
-
 
 
 	</body>
+
+	<footer>
+	HANDMADE WEBSITE BY YUNYI.DESIGN @ 2017-2018 ALL RIGHTS RESERVED
+	</footer>
+
+
 </html>
