--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
 <style media="screen">
 </style>
 
+<header>
+
+</header>
+
 <body>
   <script>
     document.body.className += ' fade-out';
   </script>
 
-  <div class="right">
+  <div class="navigation">
     <a href="index.html">work</a>&nbsp;&nbsp;&nbsp;
+    <a href="fotos.html">foto</a>&nbsp;&nbsp;&nbsp;
     <a href="contact.html">contact</a>
   </div>
 
@@ -27,57 +32,49 @@
     YUNYI.&nbsp;DESIGN
   </div>
 
+
   <div class="wrapper">
+     <section>
+         <div class="content">
+           <a href="index/cinematheque.html"><img class="bottom" src="https://c2.staticflickr.com/2/1815/42182956590_a731504e0a_b.jpg" /></a>
+         </div>
 
+         <div class="content">
+           <a href="index/3.html"><img class="bottom" src="https://c1.staticflickr.com/1/882/41049456191_1d5b184fe9_b.jpg" /></a>
+         </div>
 
-    <div class="row align__bottom">
+         <div class="content">
+         <a href="index/lostrivers.html"><img class="bottom" src="https://c2.staticflickr.com/2/1834/43946367412_ff68d7291b_b.jpg" /></a>
+         </div>
 
-      <div class="col__3">
-        <div class="content">
-          <img class="bottom" src="https://c1.staticflickr.com/5/4483/38082703082_190bac211a_b.jpg" />
-        </div>
-      </div>
+         <div class="content">
+           <a href="index/yunyidotdesign.html"><img class="bottom" src="https://c1.staticflickr.com/1/941/30125922048_fd798f33e3_b.jpg" /></a>
+         </div>
 
-      <div class="col__3">
-        <div class="content">
-          <img class="bottom" src="https://c1.staticflickr.com/5/4510/38110715501_2cba43284c_b.jpg" />
-        </div>
-      </div>
+         <div class="content">
+           <a href="index/vomhe.html"><img class="bottom" src="https://c1.staticflickr.com/1/935/29053985957_e40488f11c_b.jpg" /></a>
+         </div>
 
-      <div class="col__3">
-        <div class="content">
-          <img class="bottom" src="https://c1.staticflickr.com/5/4509/38092467201_f061fefefb_b.jpg" />
-        </div>
-      </div>
+          <div class="content">
+            <a href="index/intrasia.html"><img class="bottom" src="https://c2.staticflickr.com/2/1778/43931244412_da0df6f719_b.jpg" /></a>
+          </div>
 
-      <div class="col__3">
-        <div class="content">
-          <img class="bottom" src="https://c1.staticflickr.com/5/4459/26309159039_f24ef0c627_h.jpg" />
-        </div>
-      </div>
+          <div class="content">
+            <a href="index/fading.html"><img class="bottom" src="https://c2.staticflickr.com/2/1816/29057065537_772385ecd7_b.jpg" /></a>
+          </div>
 
-      <div class="col__3">
-        <div class="content">
-          <img class="bottom" src="https://c1.staticflickr.com/5/4496/37376450654_7ed896786a_b.jpg" />
-        </div>
-      </div>
-
-      <div class="col__3">
-        <div class="content">
-          <img class="bottom" src="https://c1.staticflickr.com/5/4507/38054482552_181465b715_b.jpg" />
-        </div>
-      </div>
-    </div>
-
-
-
+     </section>
   </div>
 
-  </div>
-  </div>
-	<div class="foot">
-	HANDMADE WEBSITE BY YUNYI.DESIGN @ 2017-2018 ALL RIGHTS RESERVED
-	</div>
+
+
+
+
+
 </body>
+
+<footer>
+HANDMADE WEBSITE BY YUNYI.DESIGN @ 2017-2018 ALL RIGHTS RESERVED
+</footer>
 
 </html>
