--- a/index/latd.html
+++ b/index/latd.html
@@ -30,15 +30,26 @@
 
 
   <div class="wrapper">
+
+
     <section>
       <div class="text">
-        Brand Identity for myself.
+
+        Worked in close collaboration with the curator of Peace Not War: Art That Takes a Stand and staff from the Library at the Dock to conceive, design and implement the overall experience design strategy for the exhibition. <br><br>
+        I contributed in creating the main identity, print materials and the initial sketch-up of the exhibition promotion video.
         <br><br>
-        In progress.
+        <br><br>
+        Identity Team: <br>Bernadette Linda widjaja, Esther Nitafan, Rehan Shrestha, Santiago Baumann Soler, Yunyi Xie.
      </div>
 
      <div class="large">
-          <img src="https://c1.staticflickr.com/1/941/30125922048_fd798f33e3_b.jpg" alt="">
+       <img src="https://c2.staticflickr.com/2/1833/30140278428_a0f4df3347_b.jpg" alt="">
+       <img src="https://c2.staticflickr.com/2/1835/44008882221_ba38496a18_b.jpg" alt="">
+       <img src="https://c1.staticflickr.com/1/934/43102439545_7e06a37924_b.jpg" alt="">
+       <img src="https://media.giphy.com/media/9V1HsGR4R2gILhvOQ3/giphy.gif" alt="">
+       <img src="https://c2.staticflickr.com/2/1831/30139679998_780498afdf_b.jpg" alt="">
+
+
      </div>
     </section>
   </div>
