--- a/contact.html
+++ b/contact.html
@@ -29,12 +29,16 @@
     <div class="wrapper">
 		<section>
 			<div>
+
+					<img class="icon" src="assets/images/yunyidoticon.png" alt="">
+				 <br><br><br>
 					Instagram <br>@<span class="ins"><a href="https://www.instagram.com/yunyi.design/">yunyi.design</a></span>
 					<br><br>
 					E-mail <br>hello@yunyi.design
 					<br><br>
 					Mobile<br>+61 420-845-561
 			</div>
+
 
 			<div>
 				I’m a multi-disciplinary designer, freshly graduated from Monash University with a bachelor degree of Communication Design specialising in brand identity design, photography and illustration. Each design is concept driven, developing a unique solution that is specific for each project.
