--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
          </div>
 
          <div class="content">
+           <a href="index/intrasia.html"><img class="bottom" src="https://c2.staticflickr.com/2/1778/43931244412_da0df6f719_b.jpg" /></a>
+         </div>
+
+         <div class="content">
+           <a href="index/latd.html"><img class="bottom" src="https://c2.staticflickr.com/2/1835/44008882221_ba38496a18_b.jpg" /></a>
+         </div>
+
+         <div class="content">
+           <a href="index/yunyidotdesign.html"><img class="bottom" src="https://c1.staticflickr.com/1/941/30125922048_fd798f33e3_b.jpg" /></a>
+         </div>
+
+         <div class="content">
            <a href="index/3.html"><img class="bottom" src="https://c1.staticflickr.com/1/882/41049456191_1d5b184fe9_b.jpg" /></a>
          </div>
 
@@ -48,16 +60,8 @@
          </div>
 
          <div class="content">
-           <a href="index/yunyidotdesign.html"><img class="bottom" src="https://c1.staticflickr.com/1/941/30125922048_fd798f33e3_b.jpg" /></a>
-         </div>
-
-         <div class="content">
            <a href="index/vomhe.html"><img class="bottom" src="https://c1.staticflickr.com/1/935/29053985957_e40488f11c_b.jpg" /></a>
          </div>
-
-          <div class="content">
-            <a href="index/intrasia.html"><img class="bottom" src="https://c2.staticflickr.com/2/1778/43931244412_da0df6f719_b.jpg" /></a>
-          </div>
 
           <div class="content">
             <a href="index/fading.html"><img class="bottom" src="https://c2.staticflickr.com/2/1816/29057065537_772385ecd7_b.jpg" /></a>
