--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 
 
 			<div>
-				I’m a multi-disciplinary designer, freshly graduated from Monash University with a bachelor degree of Communication Design specialising in brand identity design, photography and illustration. Each design is concept driven, developing a unique solution that is specific for each project.
+				I’m a multi-disciplinary designer, freshly graduated from Monash University with a bachelor degree of Communication Design. I specialise in brand identity design, photography and illustration. Each design is concept driven, developing a unique solution that is specific for each project.
 				<br>If you'd like to discuss a strategic approach to the design, redesign, or refinement of your visual branding, please don't hesitate to get in touch with me. :)
         <br><br><br><br>
 				Monash University — <br>
