--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
 
   <div class="wrapper">
      <section>
-         <div class="content">
-           <a href="index/cinematheque.html"><img class="bottom" src="https://c2.staticflickr.com/2/1815/42182956590_a731504e0a_b.jpg" /></a>
-         </div>
+
+        <div class="content">
+          <a href="index/intrasia.html"><img class="bottom"  src="https://c2.staticflickr.com/2/1778/43931244412_da0df6f719_b.jpg" /></a>
+        </div>
 
          <div class="content">
-           <a href="index/intrasia.html"><img class="bottom" src="https://c2.staticflickr.com/2/1778/43931244412_da0df6f719_b.jpg" /></a>
+           <a href="index/cinematheque.html"><img class="bottom" src="https://c2.staticflickr.com/2/1815/42182956590_a731504e0a_b.jpg" /></a>
          </div>
 
          <div class="content">
@@ -56,16 +57,20 @@
          </div>
 
          <div class="content">
+          <a href="index/thirtylogos.html"><img class="bottom" src="https://c1.staticflickr.com/1/935/29075589777_418dfc582c_b.jpg" /></a>
+         </div>
+
+         <div class="content">
          <a href="index/lostrivers.html"><img class="bottom" src="https://c2.staticflickr.com/2/1834/43946367412_ff68d7291b_b.jpg" /></a>
+         </div>
+
+         <div class="content">
+           <a href="index/fading.html"><img class="bottom" src="https://c2.staticflickr.com/2/1816/29057065537_772385ecd7_b.jpg" /></a>
          </div>
 
          <div class="content">
            <a href="index/vomhe.html"><img class="bottom" src="https://c1.staticflickr.com/1/935/29053985957_e40488f11c_b.jpg" /></a>
          </div>
-
-          <div class="content">
-            <a href="index/fading.html"><img class="bottom" src="https://c2.staticflickr.com/2/1816/29057065537_772385ecd7_b.jpg" /></a>
-          </div>
 
      </section>
   </div>
