--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
          </div>
 
          <div class="content">
+           <a href="index/bluecheeseburger.html"><img class="bottom" src="https://c2.staticflickr.com/2/1876/29821772297_02d2e90085_b.jpg" /></a>
+         </div>
+
+         <div class="content">
           <a href="index/thirtylogos.html"><img class="bottom" src="https://c1.staticflickr.com/1/935/29075589777_418dfc582c_b.jpg" /></a>
          </div>
 
@@ -66,7 +70,7 @@
          </div>
 
          <div class="content">
-           <a href="index/yunyidotdesign.html"><img class="bottom" src="https://c1.staticflickr.com/1/941/30125922048_fd798f33e3_b.jpg" /></a>
+           <a href="index/yunyidotdesign.html"><img class="bottom" src="https://c2.staticflickr.com/2/1814/29157639827_0bf7755b14_b.jpg" /></a>
          </div>
 
 
