--- a/fotos.html
+++ b/fotos.html
@@ -31,17 +31,8 @@
 
 
     <div class="fotowrapper">
-			     <img src="https://c1.staticflickr.com/1/896/26399627167_896c1f9b55_b.jpg" alt="firstoftherollcalling">
-	         <img src="https://c1.staticflickr.com/1/876/41271548571_c11fd8d87a_b.jpg" alt="prahranpattherns">
-					 <img src="https://c1.staticflickr.com/1/865/27398412168_7161536b0c_b.jpg" alt="vinthesky">
-					 <img src="https://c1.staticflickr.com/1/892/39462134750_26e3253ebc_b.jpg" alt="bikingnearthesea">
-					 <img src="https://c1.staticflickr.com/1/817/27398309038_bea5622840_b.jpg" alt="thesea">
-					 <img src="https://c1.staticflickr.com/1/886/40375151585_9881594be0_b.jpg" alt="coupleandredflags">
-					 <img src="https://c1.staticflickr.com/1/788/41271395491_9b897cb5b7_b.jpg" alt="ngvbackyard">
-					 <img src="https://c1.staticflickr.com/1/801/27398403578_d52474e5ab_b.jpg" alt="prahrantenebroso">
-					 <img src="https://c1.staticflickr.com/1/808/41227629252_4898f64c7d_b.jpg" alt="fatwanted">
-					 <img src="https://c1.staticflickr.com/1/883/41271403481_37736c3e2e_b.jpg" alt="brokenpipe">
-					 <img src="https://c1.staticflickr.com/1/902/41271402191_4a477b7522_b.jpg" alt="completepoems">
+			     <img src="" alt="firstoftherollcalling">
+
 	  </div>
 
 
