--- a/index/protrio.html
+++ b/index/protrio.html
@@ -30,19 +30,16 @@
 
 
   <div class="wrapper">
-
-
     <section>
       <div class="text">
 
-        The illustration was done for the purpose of a vinyl cover redesign of the song
-        Lost Rivers by Japanese artist Sainkho Namtchylak.<br><br>
-        Hand-drawn with charcoal and graphite, the design intends to visualise the roughness and primitivity of this particular song.
      </div>
 
      <div class="large">
-          <img src="https://c2.staticflickr.com/2/1834/43946367412_ff68d7291b_b.jpg" alt="">
-          <img src="https://c1.staticflickr.com/1/805/41049455001_7caf9dfa05_b.jpg" alt="">
+        <img src="https://farm8.staticflickr.com/7840/47254603682_074aba86f3_b.jpg" alt="">
+        <img src="https://farm8.staticflickr.com/7854/47306819891_1194f04331_b.jpg" alt="">
+        <img src="https://farm8.staticflickr.com/7896/33431005008_3e9b15943b_b.jpg" alt="">
+        <img src="https://farm8.staticflickr.com/7848/47254324832_0e2308e53b_b.jpg" alt="">
      </div>
     </section>
   </div>
